# probablepeople

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: improve-parser.md
.github/workflows/: python-publish.yml
census_names/: name_ratio.py
data_prep/: manual_labeling.py
docs/: Makefile  conf.py  index.rst  make.bat
name_data/census_names/: name_ratio.py
name_data/labeled/: company_labeled.xml  dummy.xml  female.xml  labeled.xml  manually_labeled.xml  my_labeled.xml  my_train.xml  person_labeled.xml
name_data/unlabeled/: Current_Employee_Names__Salaries__and_Position_Titles.csv  Top1000_census_surnames.csv  athletes.csv  chi_gov_employees.csv  chicago_businesses.csv  dummy.csv  incorrectly_parsed_medical_device_corps.csv  medical_device_corps.csv  professors.csv  top_female_names_census.csv  tricky_chi_gov_names.csv  unlabeled_athletes.csv  unlabeled_chi_gov_employees.csv  unlabeled_chicago_businesses.csv  unlabeled_dummy.csv  unlabeled_incorrectly_parsed_medical_device_corps.csv  unlabeled_professors.csv  unlabeled_tricky_chi_gov_names.csv  unlabeled_va_corporate.csv
name_parser/: __init__.py  config.py
probablepeople/: __init__.py  gender.py  gender_names.json  ratios.json  ratios.py
tests/: test_data_labeled.xml  test_manual_labeling.py  test_tagging.py  test_tokenizing.py
training/: measure_performance.py  training.py
training/data_prep/: census_names.py  data_prep_utils.py  get_names_from_csvs.ipynb  manual_labeling.py
training/data_prep/unlabeled_data/: ga_campaign_finance_names.csv  unlabeled.csv  unlabeled_professors.csv  (+1 more)
training/training_data/: census_female.xml  census_male.xml  census_surnames.xml  labeled.xml  manually_labeled.xml
training_data_prep/: census_names.py  chi_gov_employees.py  manual_labeling.py
training_data_prep/unlabeled_data/: ga_campaign_finance_names.csv  professors.csv  top_male_names_census.csv  unlabeled_va_corporate.csv
