[project]
name = "probablepeople"
version = "0.5.6"
description = "Parse romanized names & companies using advanced NLP methods"
readme = "README.md"
license = {text = "MIT License", url = "http://www.opensource.org/licenses/mit-license.php"}
requires-python = ">=3.9"
dependencies = [
  "python-crfsuite>=0.7",
  "probableparsing",
  "doublemetaphone"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]  

[project.urls]
Homepage = "https://github.com/datamade/probablepeople"

[project.optional-dependencies]
dev = ["pytest",
       "black",
       "isort",
       "mypy",
       "flake8",
       "parserator",
       "pre-commit"
]

[build-system]
requires = ["setuptools>=42", "wheel", "parserator", "probableparsing", "doublemetaphone"
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["probablepeople"]


[tool.setuptools.package-data]
probablepeople = ["generic_learned_settings.crfsuite",
                  "person_learned_settings.crfsuite",
                  "company_learned_settings.crfsuite",
                  "gender_names.json",
                  "ratios.json",
]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
  "tests",
  ]

[tool.mypy]
files = ["probablepeople"]
show_error_codes = true
ignore_missing_imports = true
check_untyped_defs = true
implicit_reexport = false

[tool.isort]
profile = "black"
src_paths = ["probablepeople", "tests"]
